// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildProposalDocDefinition — Konditionen-Block (DEC-120, SLC-563) > Snapshot mit 3 Milestones deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Konditionen / Teilzahlungen",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      12,
    ],
    "table": {
      "body": [
        [
          {
            "style": "tableHeader",
            "text": "Teilzahlung",
          },
          {
            "style": "tableHeader",
            "text": "Faelligkeit",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Anteil",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Betrag",
          },
        ],
        [
          {
            "style": "tableCell",
            "text": "Teilzahlung 1",
          },
          {
            "style": "tableCell",
            "text": "Bei Vertragsabschluss",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "30,00%",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "300,00 €",
          },
        ],
        [
          {
            "style": "tableCell",
            "text": "Teilzahlung 2",
          },
          {
            "style": "tableCell",
            "text": "30 Tage nach Vertragsabschluss",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "40,00%",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "400,00 €",
          },
        ],
        [
          {
            "style": "tableCell",
            "text": "Teilzahlung 3",
          },
          {
            "style": "tableCell",
            "text": "Bei Fertigstellung",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "30,00%",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "300,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "*",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
]
`;

exports[`buildProposalDocDefinition — Konditionen-Block (DEC-120, SLC-563) > Snapshot mit Milestones UND Skonto deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Konditionen / Teilzahlungen",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      12,
    ],
    "table": {
      "body": [
        [
          {
            "style": "tableHeader",
            "text": "Teilzahlung",
          },
          {
            "style": "tableHeader",
            "text": "Faelligkeit",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Anteil",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Betrag",
          },
        ],
        [
          {
            "style": "tableCell",
            "text": "Teilzahlung 1",
          },
          {
            "style": "tableCell",
            "text": "Bei Vertragsabschluss",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "50,00%",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "500,00 €",
          },
        ],
        [
          {
            "style": "tableCell",
            "text": "Teilzahlung 2",
          },
          {
            "style": "tableCell",
            "text": "Bei Fertigstellung",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "50,00%",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "500,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "*",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "color": "#475569",
    "fontSize": 9,
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Skonto: 2,00% bei Zahlung innerhalb 14 Tagen",
  },
]
`;

exports[`buildProposalDocDefinition — Konditionen-Block (DEC-120, SLC-563) > Snapshot ohne beides deterministisch (V5.5 Baseline strict) 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
]
`;

exports[`buildProposalDocDefinition — Reverse-Charge + Strategaize-vat_id (DEC-124, DEC-125) > AC21: ohne Reverse-Charge ohne branding.vat_id ist bit-identisch zum V5.6-Baseline (regression-frei) 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
]
`;

exports[`buildProposalDocDefinition — Reverse-Charge + Strategaize-vat_id (DEC-124, DEC-125) > AC22 Snapshot: Reverse-Charge=true mit beiden vat_ids deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "Acme GmbH",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (0%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "0,00 €",
              },
            ],
          },
          {
            "margin": [
              0,
              4,
              0,
              0,
            ],
            "stack": [
              {
                "bold": true,
                "color": "#0f172a",
                "fontSize": 8,
                "text": "BTW verlegd / Reverse Charge — Article 196 VAT Directive 2006/112/EC",
              },
              {
                "color": "#475569",
                "fontSize": 8,
                "text": "BTW-Nr. NL859123456B01 — BTW-Nr. DE123456789",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.000,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "canvas": [
      {
        "lineColor": "#cbd5e1",
        "lineWidth": 0.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
    "margin": [
      0,
      8,
      0,
      6,
    ],
  },
  {
    "color": "#64748b",
    "fontSize": 8,
    "margin": [
      0,
      0,
      0,
      0,
    ],
    "text": "BTW-Nr. NL859123456B01",
  },
]
`;

exports[`buildProposalDocDefinition — Reverse-Charge + Strategaize-vat_id (DEC-124, DEC-125) > AC22 Snapshot: branding.vat_id nur Footer (kein Reverse-Charge) deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "canvas": [
      {
        "lineColor": "#cbd5e1",
        "lineWidth": 0.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
    "margin": [
      0,
      8,
      0,
      6,
    ],
  },
  {
    "color": "#64748b",
    "fontSize": 8,
    "margin": [
      0,
      0,
      0,
      0,
    ],
    "text": "BTW-Nr. NL859123456B01",
  },
]
`;

exports[`buildProposalDocDefinition — Skonto conditional block (DEC-120) > Snapshot mit Skonto deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "color": "#475569",
    "fontSize": 9,
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Skonto: 2,00% bei Zahlung innerhalb 14 Tagen",
  },
]
`;

exports[`buildProposalDocDefinition — Skonto conditional block (DEC-120) > Snapshot ohne Skonto deterministisch (V5.5 Baseline) 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
]
`;
